...
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/email_text"
        android:labelFor="@id/emailEditText"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/passwordText"
        app:layout_constraintTop_toTopOf="parent" />

...
        android:inputType="textWebEmailAddress"
        android:importantForAutofill="no"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/emailText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/passwordText"
        app:layout_constraintTop_toTopOf="@id/passwordText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:onClick="login"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/registerButton"
        app:layout_constraintTop_toTopOf="@id/registerButton" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="275dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loginButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@id/infoText"
        app:layout_constraintEnd_toEndOf="parent"
...
