...
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="pseudo_text">Pseudo</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Create account</string>
    <string name="login_success">Login succeed</string>
    <string name="login_fail">Login failed</string>
    <string name="register_success">Registration successful</string>
    <string name="register_fail">Registration failed</string>
    <string name="register_info_default">Enter your register information</string>
    <string name="login_info_default">Enter your login information</string>
    <string name="email_or_password_empty">The email address and the password can\'t be empty</string>

...
